--- a/bottest.html
+++ b/bottest.html
@@ -42,7 +42,7 @@
 
     <!-- Decreased size of semi-transparent SVA image positioned to the center left -->
     <img 
-        src="blackSVA.png" 
+        src="blacksva.png" 
         alt="Black SVA Logo" 
         class="absolute left-0 top-1/2 transform -translate-y-1/2 w-1/6 opacity-80 fade-in-out">
 </body>
