--- a/bottest.html
+++ b/bottest.html
@@ -45,5 +45,10 @@
         src="blacksva.png" 
         alt="Black SVA Logo" 
         class="absolute left-0 top-1/2 transform -translate-y-1/2 w-1/6 opacity-80 fade-in-out">
+
+    <!-- Home button positioned bottom right -->
+    <a href="index.html" class="fixed bottom-4 right-4 bg-gray-900 text-white py-2 px-4 rounded-lg shadow-lg hover:bg-gray-700 transition duration-300 transform hover:scale-105">
+        Home
+    </a>
 </body>
 </html>
