--- a/contactus.html
+++ b/contactus.html
@@ -163,7 +163,7 @@
         <h2>Contact Us</h2>
         <p>We would love to hear from you! Please contact us with any questions, comments, or concerns.</p>
         
-        <form id="contactForm" onsubmit="return validateForm();" action="send_email.php" method="POST">
+        <form id="contactForm" action="mailto:apussva@gmail.com" method="POST" enctype="text/plain">
             <label for="name">Name (required)</label>
             <input type="text" id="name" name="name" required>
 
